[gd_scene load_steps=5 format=3 uid="uid://dovfe1epmv7kc"]

[ext_resource type="PackedScene" uid="uid://dheu4dabsulr0" path="res://player/player.tscn" id="1_1ip8y"]
[ext_resource type="Script" path="res://main/game.gd" id="1_77ycd"]
[ext_resource type="PackedScene" uid="uid://c0cb3yhaa1pmj" path="res://enemy/Enemy.tscn" id="3_ar6of"]
[ext_resource type="PackedScene" uid="uid://b62t4n700axb5" path="res://hpleft/hpleft.tscn" id="4_jcmkb"]

[node name="Game" type="Node2D" node_paths=PackedStringArray("player")]
script = ExtResource("1_77ycd")
player = NodePath("Player")

[node name="Enemy" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_ar6of")]
player = NodePath("../Player")

[node name="Player" parent="." instance=ExtResource("1_1ip8y")]

[node name="Hpleft" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_jcmkb")]
visible = false
player = NodePath("../Player")

[connection signal="attack" from="Player" to="Enemy" method="check_attack"]
[connection signal="hplost" from="Player" to="Hpleft" method="update"]
[connection signal="lost_signal" from="Player" to="." method="when_lost"]
[connection signal="state_changed" from="Player" to="." method="get_state"]
[connection signal="won_signal" from="Player" to="." method="when_won"]
